@@ -24,6 +24,8 @@ Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
 ????-??-?? Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
         * Release 5.0.1
         * Fixed a bug where the 'url' parameter was required even when displaying a logged out page.
+        * Fixed a bug where attributes were always transferred regardless of the 'attributes' value in
+         module_sbcasserver.php.
 
 2013-11-04 Bjørn Rohde Jensen <brj@statsbiblioteket.dk>
         * Release 5.0.0
